Fix header misalignment issue.

--- a/frontend/app/styles/_typography.scss
+++ b/frontend/app/styles/_typography.scss
@@ -289,7 +289,8 @@ hr.separator {
     @extend .alrightsansbold;
     text-transform: uppercase;
     font-size: 3.75em;
-    margin: 30px 0 40px;
+    margin-top:30px;
+    margin-bottom:40px;
   }
   p {
     font-size: 1.1em;
