--- a/www/assets/styles/wysiwyg.css
+++ b/www/assets/styles/wysiwyg.css
@@ -589,7 +589,8 @@ hr.separator {
   .masthead .section-headline {
     text-transform: uppercase;
     font-size: 3.75em;
-    margin: 30px 0 40px; }
+    margin-top: 30px;
+    margin-bottom: 40px; }
   .masthead p {
     font-size: 1.1em;
     padding: 0 0 8px;
